--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -115,8 +115,14 @@ body {
         font-size: 32px;
     }
 
-    img {
+    .map {
         width: 300px;
+        height: 300px;
+    }
+
+    #map-container {
+        width: 300px;
+        height: 300px;
         margin: 0px;
         padding: 10px;
     }
