--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -110,6 +110,37 @@ body {
     }
 }
 
+@media screen and (max-width: 468px) {
+    h1 {
+        font-size: 50px;
+    }
+    .map {
+        width: 400px;
+    }
+
+    #map-container {
+        width: 400px;
+        padding: 10px;
+        margin: 10px;
+    }
+
+    .dropdown {
+        margin-left: 10px;
+    }
+
+    #button1 {
+        width: 400px;
+    }
+
+    #button2 {
+        width: 400px;
+    }
+
+    #button3 {
+        width: 400px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     h1 {
         font-size: 32px;
@@ -124,7 +155,6 @@ body {
         width: 300px;
         height: 300px;
         margin: 0px;
-        padding: 10px;
     }
 
     .dropdown {
