--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -35,7 +35,7 @@ body {
 }
 /*Dropdown Button */
 .dropbtn {
-	background-color: #322046;
+	background-color: #b295ba;
     color: white;
     padding: 16px;
     font-size: 16px;
