make it easier to configure the app for places besides Austin
The application is largely model driven.  However we were still hardcoding
the jumbotron background image and text.  This commit makes both of these
attributes model properties that may be easily localized for new places
we add to the model.

See: model.js

var model = {
   places: {
      austin: {
        >appName: "Austin Aware",
        >backgroundUrl: "http://www.pictureofAustin.com",
        >backgroundImagePosition: "top center",
         ..
      }
      ..
   }
}

This /does/ make the model aware of the view, per-se, and maybe violate
some stricture of MVC.  But it's in the service of easily reconfiguring
the entire app, just by making a call to:

   model.setPlace("Timbuktu");

and then having the background change accordingly along with the
data sources that are relevant for this new place.

--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -36,6 +36,9 @@ body {
 .jumbotron {
     text-align: center;
     background-image: url("http://www.alteredperspectives.us/wp-content/uploads/2011/12/DW_Austin_Skyline_Panorama-11.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
     opacity: 0.7;
 }
 
