fix a fat-finger typo in the css comment header that caused body style to be ignored (causing the background color to revert to white)
Add some human factors nuances to improve readability of jumbotron text
and map caption.

--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -1,4 +1,4 @@
-//*----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------
 // File: view.css
 //
 // This file contains project-specific styling for the view.
@@ -7,18 +7,7 @@
 
 body {
     font-family: 'Raleway', sans-serif;
-    background: #322046;
-}
-
-/* Wow, all of a sudden, scaffolding.less from twitter bootstrap css is
- * forcing the background to white and not respecting the body styling
- * just above.  I see multiple threads about this.  No idea why this
- * started happening.
- *
- * To win the fight, we need to be a bit more specific.
- */
-html body {
-    background: #322046;
+    background-color: #322046;
 }
 
 /* Map area */
@@ -43,7 +32,7 @@ html body {
 #map-status {
     color: white;
     background-color: black;
-    font-size: 1.5em;
+    font-size: 1.7em;
 }
 
 /* Title heading */
@@ -58,6 +47,11 @@ html body {
     background-size: cover;
     background-position: top center;
     opacity: 0.7;
+}
+
+#jumbotron-place {
+    background-color: rgba(128, 128, 128, .6);
+    color: white;
 }
 
 /* Dropdown Button */
