add 'austin dangerous dogs' data to the app
This only took 30 minutes given the good separation of
concerns we have with our MVC structure.

1. Update the model with a stanza for dangerous dogs endpoint
   and related attributes.

2. Add a click handler in the controller.

3. Update index.html and the css to add and style the
   new button for the new data source.

Ultimately, steps 2 and 3 will be eliminated once we have
a scalable drop-down selection button which is programmatically
tuned to feed off the model data directly.

--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -32,7 +32,7 @@ body {
 #map-status {
     color: white;
     background-color: black;
-    font-size: 1.7em;
+    font-size: 1.5em;
 }
 
 /* Title heading */
@@ -47,6 +47,7 @@ body {
     background-size: cover;
     background-position: top center;
     opacity: 0.7;
+    margin-bottom: 10px;
 }
 
 #jumbotron-place {
@@ -116,6 +117,10 @@ body {
     width: 350px;
 }
 
+#austinDangerousDogs-button {
+    width: 350px;
+}
+
 #reset-button {
     width: 350px;
     background-color: #b295ba;
@@ -137,6 +142,10 @@ body {
     }
 
     #trafficSignalsOnFlash-button {
+        width: 450px;
+    }
+
+    #austinDangerousDogs-button {
         width: 450px;
     }
 
@@ -216,6 +225,10 @@ body {
         width: 400px;
     }
 
+    #austinDangerousDogs-button {
+        width: 400px;
+    }
+
     #reset-button {
         width: 400px;
     }
@@ -251,6 +264,10 @@ body {
     }
 
     #trafficSignalsOnFlash-button {
+        width: 300px;
+    }
+
+    #austinDangerousDogs-button {
         width: 300px;
     }
 
