--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -128,6 +128,7 @@ body {
 }
 
 /* Media queries */
+/*iPad viewport*/
 @media screen and (max-width: 768px) {
     .dropdown {
         margin-left: 120px;
@@ -154,7 +155,7 @@ body {
     }
 }
 
-/* Tablet landscape viewport */
+/* iPad landscape viewport */
 @media screen and (min-width: 768px)
             and (max-width: 1024px)
             and (orientation: landscape) {
@@ -170,7 +171,7 @@ body {
 
 }
 
-/* Phone landscape viewport */
+/* iPhone landscape viewport */
 @media screen
   and (device-width: 320px)
   and (device-height: 640px)
@@ -199,6 +200,7 @@ body {
     }
   }
 
+/*Intermediate device*/
 @media screen and (max-width: 468px) {
     h1 {
         font-size: 50px;
@@ -242,6 +244,7 @@ body {
     }
 }
 
+/*iPhone 6 viewport*/
 @media screen and (max-width: 320px) {
     h1 {
         font-size: 32px;
@@ -289,6 +292,7 @@ body {
     }
 }
 
+/*Secondary mobile phone viewport*/
 @media screen and (max-width: 270px) {
     h1 {
         font-size: 24px;
