--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -76,9 +76,12 @@ body {
 .dropdown {
 	position: relative;
     display: inline-block;
-    padding: 10px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin: 10px;
     margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -113,7 +116,7 @@ body {
 /* Buttons */
 #traffic2015-button {
     padding: 15px;
-    margin-top: 20px;
+    margin-top: 32px;
     width: 350px;
 }
 
@@ -126,6 +129,10 @@ body {
 }
 
 #austinDangerousDogs-button {
+    width: 350px;
+}
+
+#austinFoundPets-button {
     width: 350px;
 }
 
@@ -155,6 +162,10 @@ body {
     }
 
     #austinDangerousDogs-button {
+        width: 450px;
+    }
+
+    #austinFoundPets-button {
         width: 450px;
     }
 
@@ -246,6 +257,10 @@ body {
         width: 400px;
     }
 
+    #austinFoundPets-button {
+        width: 400px;
+    }
+
     #reset-button {
         width: 400px;
     }
@@ -293,6 +308,10 @@ body {
         width: 300px;
     }
 
+    #austinFoundPets-button {
+        width: 300px;
+    }
+
     #reset-button {
         width: 300px;
     }
@@ -327,6 +346,10 @@ body {
     }
 
     #austinDangerousDogs-button {
+        width: 250px;
+    }
+
+    #austinFoundPets-button {
         width: 250px;
     }
 
