change header image to local asset to avoid throttling by server
Some feedback from Michael D. indicated slow load times of our header image (8+ seconds).
I eventually hit some /serious/ throttling this morning.  Did we get blacklisted by:

http://www.alteredperspectives.us/wp-content/uploads/2011/12/DW_Austin_Skyline_Panorama-11.jpg

for too man downloads?

I found a similar image that was 8 MB huge, so i cut that down to 1400 x 800-ish which
comes in at about 750KB.  At least we have the asset locally so we protect against
the throttling I was seeing and it will save and extra http request as Michael pointed out.

Also, a little bit of code cleanup in the controller.  Avoid giving user default data.
Just let them select what they want to see.  Moving the reset-button callback up with
the other button callbacks under cInit.

--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -43,7 +43,8 @@ body {
 
 .jumbotron {
     text-align: center;
-    background-image: url("http://www.alteredperspectives.us/wp-content/uploads/2011/12/DW_Austin_Skyline_Panorama-11.jpg");
+    background-image: url("../img/austin-aware-1400x403.jpg");
+
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
